[package]
name = "ti-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ti-node"
path = "src/bin/server.rs"

[dependencies]
libp2p = { version = "0.44.0",features = ["gossipsub"]}
futures = "0.3.1"
futures-timer = "3.0.2"
lazy_static = "1.2"
async-std = { version = "1.6.2", features = ["attributes"] }
async-trait = "0.1"
env_logger = "0.9.0"
clap = "2.33.3"
config = "0.11.0"
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
eyre = "0.6"
hex = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", branch="master"}
reqwest = "0.11.11"
strum_macros = "0.22"
chrono = "0.4"
